Added Images Folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="first" id="home">
       <nav data-aos="slide-left"   data-aos-offset="100"  data-aos-duration="1000" data-aos-easing="ease-in-out" class="navbar">
         <div class="logo">
-          <img src="vklogo.jpeg" />
+          <img src="Images/vklogo.jpeg" />
         </div>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -37,7 +37,7 @@
     </section>
     <section class="second" id="about">
       <div data-aos="fade-in"  data-aos-offset="300"  data-aos-duration="700" data-aos-easing="ease-in-out"class="box Odi">
-        <img src="odi.jpg" />
+        <img src="Images/odi.jpg" />
         <h1>ODI</h1>
         <p>
           Virat Kohli is an Indian cricketer who is widely regarded as one of
@@ -57,7 +57,7 @@
         </p>
       </div>
       <div data-aos="fade-in"  data-aos-offset="200"  data-aos-duration="700" data-aos-easing="ease-in-out"class="box test">
-        <img src="test.jpg" />
+        <img src="Images/test.jpg" />
         <h1>Test</h1>
         <p>
           Kohli holds several records in Test cricket. He is the fastest player
@@ -75,7 +75,7 @@
         </p>
       </div>
       <div data-aos="fade-in"  data-aos-offset="200"  data-aos-duration="700" data-aos-easing="ease-in-out"class="box T20">
-        <img src="t20.webp" />
+        <img src="Images/t20.webp" />
         <h1>T20</h1>
         <p>
           Virat Kohli's performance in T20 cricket has also been impressive.
@@ -105,7 +105,7 @@
             7. Kolhi is the most successful Indian ODI captain. Kohli’s success rate is 75.89% as a captain which is better than M.S. Dhoni.<hr><br>
           
            </p></div>
-        <div class="col1 image"><img src="kohli.jpeg">
+        <div class="col1 image"><img src="Images/kohli.jpeg">
         </div>
         <div data-aos="slide-left"   data-aos-offset="400"  data-aos-duration="1000" data-aos-easing="ease-in-out" class="col1 records"><p><h1>Milestones reached by Virat Kohli</h1>
             1. Fastest Indian to reach 1000, 5000, 6000, 7000, 8000, 9000, and 10,000 runs in ODIs<br>
@@ -124,42 +124,42 @@
     <section class="fourth" id="books">
        <div data-aos="fade-in"   data-aos-offset="400"  data-aos-duration="1000" data-aos-easing="ease-in-out" class=" tray1 head1"><h1>Books On Virat Kohli</h1></div> 
        
-        <div data-aos="slide-right"   data-aos-offset="200"  data-aos-duration="4000" data-aos-easing="ease-in-out"   class="tray1 vk"><img src="books.jpg"></div>
+        <div data-aos="slide-right"   data-aos-offset="200"  data-aos-duration="4000" data-aos-easing="ease-in-out"   class="tray1 vk"><img src="Images/books.jpg"></div>
         <div data-aos="zoom-in"   data-aos-offset="100"  data-aos-duration="1000" data-aos-easing="ease-in-out" class="tray1 books">
             <div class="book1">
                 <h1 class="head3">Winning Like Virat: Think and Succeed like Kohli</h1>
                 <p class="author">By Abhirup Bhattacharya (Author)</p>
-                <img src="book1.jpg">
+                <img src="Images/book1.jpg">
                 <a href="https://www.amazon.in/Winning-Like-Virat-Think-Succeed/dp/8129146061/ref=pd_lpo_sccl_2/260-6830032-7596467?pd_rd_w=2lB75&content-id=amzn1.sym.c3daf87c-2802-47b7-8fa4-23dc91a4fca7&pf_rd_p=c3daf87c-2802-47b7-8fa4-23dc91a4fca7&pf_rd_r=4ABC0J0E1DR0YSHSG7H3&pd_rd_wg=QYrkb&pd_rd_r=5906a224-9d3b-4ff0-a1b8-c30a9c9c4bd3&pd_rd_i=8129146061&psc=1"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
             </div>
             <div class="book1">
                 <h1 class="author">Virat Kohli : Indian Cricketer</h1>
                 <p class="author">By Mr Vivek Kumar Pandey Shambhunath (Author)</p>
-                <img src="book2.jpg" class="book2">
+                <img src="Images/book2.jpg" class="book2">
                 <a href="https://www.amazon.in/Virat-Kohli-Vivek-Pandey-Shambhunath/dp/B09NSTXJXR/ref=sr_1_2?adgrpid=1316117025883619&hvadid=82257581320705&hvbmt=be&hvdev=c&hvlocphy=155270&hvnetw=o&hvqmt=e&hvtargid=kwd-82258191382110%3Aloc-90&hydadcr=5870_2377565&keywords=books+on+virat+kohli&qid=1689526202&sr=8-2"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
             </div>
             <div class="book1">
                 <h1 class="author">The Virat Kohli Color : King Kohli </h1>
                 <p class="author">By Mr Vivek Kumar Pandey (Author)</p>
-                <img src="book3.jpg" class="book3">
+                <img src="Images/book3.jpg" class="book3">
                 <a href="https://www.amazon.in/dp/B0BQC5CHC2/ref=sspa_dk_detail_0?psc=1&pd_rd_i=B0BQC5CHC2&pd_rd_w=rcgQb&content-id=amzn1.sym.2575ab02-73ff-40ca-8d3a-4fbe87c5a28d&pf_rd_p=2575ab02-73ff-40ca-8d3a-4fbe87c5a28d&pf_rd_r=H22YJT5Y597Y90VK8C2B&pd_rd_wg=84uZT&pd_rd_r=c25bf58c-db54-412b-95fc-5ded8c4a0daa&s=books&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWw"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
             </div>
             <div class="book1">
                 <h1 class="author">The Biggest Fan Of Virat Kohli </h1>
                 <p class="author">By Shobhit Virmani (Author)</p>
-                <img src="book4.jpg" class="book4">
+                <img src="Images/book4.jpg" class="book4">
                 <a href="https://www.amazon.in/dp/B0788WT8DQ/ref=sspa_dk_detail_2?psc=1&pd_rd_i=B0788WT8DQ&pd_rd_w=rcgQb&content-id=amzn1.sym.2575ab02-73ff-40ca-8d3a-4fbe87c5a28d&pf_rd_p=2575ab02-73ff-40ca-8d3a-4fbe87c5a28d&pf_rd_r=H22YJT5Y597Y90VK8C2B&pd_rd_wg=84uZT&pd_rd_r=c25bf58c-db54-412b-95fc-5ded8c4a0daa&s=books&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWw"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
             </div>
             <div class="book1">
                 <h1 class="author">The Nine Waves</h1>
                 <p class="author">By Mihir Bose (Author)</p>
-                <img src="book5.jpg" class="book5">
+                <img src="Images/book5.jpg" class="book5">
                 <a href="https://www.amazon.in/dp/9388292626/ref=sspa_dk_detail_4?psc=1&pd_rd_i=9388292626&pd_rd_w=rcgQb&content-id=amzn1.sym.2575ab02-73ff-40ca-8d3a-4fbe87c5a28d&pf_rd_p=2575ab02-73ff-40ca-8d3a-4fbe87c5a28d&pf_rd_r=H22YJT5Y597Y90VK8C2B&pd_rd_wg=84uZT&pd_rd_r=c25bf58c-db54-412b-95fc-5ded8c4a0daa&s=books&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWw"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
             </div>
             <div class="book1">
                 <h1 class="author">Driven</h1>
                 <p class="author">By  Vijay Lokapally (Author)</p>
-                <img src="book6.jpg" class="book6">
+                <img src="Images/book6.jpg" class="book6">
                 <a href="https://www.amazon.in/Driven-Virat-Kohli-Vijay-Lokapally/dp/9389000769/ref=sr_1_6?keywords=books+on+virat+kohli&qid=1689526670&sr=8-6"><i class="fa-solid fa-cart-shopping fa-xl"></i></a>
             </div>
           </div>
